@@ -9,34 +9,29 @@ import org.prebid.server.execution.file.FileProcessor;
 import org.prebid.server.hooks.modules.com.scientiamobile.wurfl.devicedetection.config.WURFLDeviceDetectionConfigProperties;
 import org.prebid.server.hooks.modules.com.scientiamobile.wurfl.devicedetection.model.WURFLEngineUtils;
 
+import java.util.Collections;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
 
 public class WURFLService implements FileProcessor {
 
-    private static final Logger LOG = LoggerFactory.getLogger(WURFLService.class);
+    private static final Logger logger = LoggerFactory.getLogger(WURFLService.class);
 
-    private final AtomicReference<WURFLEngine> arWurflEngine = new AtomicReference<>();
+    private final AtomicReference<WURFLEngine> wurflEngine;
     private final WURFLDeviceDetectionConfigProperties configProperties;
 
     public WURFLService(WURFLEngine wurflEngine, WURFLDeviceDetectionConfigProperties configProperties) {
-        this.arWurflEngine.set(wurflEngine);
-        this.configProperties = configProperties;
-    }
-
-    protected WURFLEngine createEngine(String dataFilePath) {
-        final WURFLEngine wurflEngine = WURFLEngineUtils.initializeEngine(configProperties, dataFilePath);
-        wurflEngine.load();
-        LOG.info("WURFL Engine initialized");
-        return wurflEngine;
+        this.wurflEngine = new AtomicReference<>(wurflEngine);
+        this.configProperties = Objects.requireNonNull(configProperties);
     }
 
     public Future<?> setDataPath(String dataFilePath) {
         try {
-            final WURFLEngine engine = this.createEngine(dataFilePath);
-            this.arWurflEngine.set(engine);
+            final WURFLEngine engine = createEngine(dataFilePath);
+            this.wurflEngine.set(engine);
         } catch (Exception e) {
             return Future.failedFuture(e);
         }
@@ -44,23 +39,28 @@ public class WURFLService implements FileProcessor {
         return Future.succeededFuture();
     }
 
+    protected WURFLEngine createEngine(String dataFilePath) {
+        final WURFLEngine wurflEngine = WURFLEngineUtils.initializeEngine(configProperties, dataFilePath);
+        wurflEngine.load();
+        logger.info("WURFL Engine initialized");
+        return wurflEngine;
+    }
+
     public Optional<Device> lookupDevice(Map<String, String> headers) {
-        final WURFLEngine wurflEngine = arWurflEngine.get();
-        return Optional.ofNullable(wurflEngine)
+        return Optional.ofNullable(wurflEngine.get())
                 .map(engine -> engine.getDeviceForRequest(headers));
     }
 
     public Set<String> getAllCapabilities() {
-        final WURFLEngine wurflEngine = arWurflEngine.get();
-        return Optional.ofNullable(wurflEngine)
+        return Optional.ofNullable(wurflEngine.get())
                 .map(WURFLEngine::getAllCapabilities)
-                .orElse(Set.of());
+                .orElse(Collections.emptySet());
     }
 
     public Set<String> getAllVirtualCapabilities() {
-        final WURFLEngine wurflEngine = arWurflEngine.get();
-        return Optional.ofNullable(wurflEngine)
+        return Optional.ofNullable(wurflEngine.get())
                 .map(WURFLEngine::getAllVirtualCapabilities)
-                .orElse(Set.of());
+                .orElse(Collections.emptySet());
     }
 }
+
